--- a/trunk/dev/EFC.Framework/src/EFC.Common.Service/packages.config
+++ b/trunk/dev/EFC.Framework/src/EFC.Common.Service/packages.config
@@ -3,7 +3,8 @@
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
-  <package id="PostSharp" version="4.2.24" targetFramework="net45" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
+  <package id="NUnit" version="3.10.1" targetFramework="net45" />
+  <package id="PostSharp" version="6.0.27" targetFramework="net45" />
+  <package id="PostSharp.Redist" version="6.0.27" targetFramework="net45" />
+  <package id="Unity" version="5.8.11" targetFramework="net45" />
 </packages>
