--- a/trunk/dev/EFC.Framework/src/EFC.Components/packages.config
+++ b/trunk/dev/EFC.Framework/src/EFC.Components/packages.config
@@ -4,10 +4,11 @@
   <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Validation" version="6.0.1304.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
-  <package id="PostSharp" version="4.2.24" targetFramework="net45" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="NUnit" version="3.10.1" targetFramework="net45" />
+  <package id="PostSharp" version="6.0.27" targetFramework="net45" />
+  <package id="PostSharp.Redist" version="6.0.27" targetFramework="net45" />
+  <package id="Unity" version="5.8.11" targetFramework="net45" />
 </packages>
